# live

app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/heshiqi/livepushdome/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: pushvideo.cpp  pushvideo.h
app/src/main/java/com/example/heshiqi/livepushdome/: FFmpeg.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/heshiqi/livepushdome/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
